[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="simple_logger"
version="0.0.1"
requires-python=">=3.6"
dependencies=[
    "click",
    "tzdata",
    "apscheduler"
]

[project.scripts]
start="qlogger.cli:start"
stop="qlogger.cli:stop"
status="qlogger.cli:status"
